# shogi_rust

./: .gitignore  Cargo.toml  README.md  convert_sfen.py  converted_records2016_10818.sfen  taya36.sfen  weights.csv
.github/release-notes/: v2.4.0.md  v2.4.1.md  v2.4.2.md  v2.4.3.md  v2.4.5.md  v2.4.6.md  v2.5.0.md  v2.5.1.md  v2.5.2.md  v2.5.3.md  v2.5.4.md  v2.6.0.md
.github/workflows/: ci.yml  release.yml  update-v240-release.yml
benchmarks/: README.md
benchmarks/baselines/: search_fingerprint_v2.5.4_plus_master.json  v2.5.4_plus_master.json
data/search_quality/: README.md  loss_in_check_low_reply.sfen  taildrop_root_rescue.sfen
docs/: README.md  ai.md  artifact_policy.md  binaries.md  evaluation.md  halfkp64_training.md  halfkp_kpp_projection_design.md  halfkp_performance_training_design.md  halfkp_training_start_gate.md  kpp_learn.md  kpp_self_learn.md  mmto_lite_validation.md  mmto_tree_training.md  move_ordering.md  parallel_search.md  position_hash.md  refactoring_handoff_v2.5.4.md  refactoring_plan_v2.5.4.md  release_acceptance.md  search_quality_tools.md  selfplay_benchmark.md  sennichite.md  toolchain_policy.md  usi_shogi.md  utils.md  v2.5.2_parallel_mate_bug_investigation.md
docs/adr/: 0001-explicit-binary-targets.md  0002-artifact-layout.md
report/: 2026-06-19_00-04-20_UTC_v210-baseline-100game-benchmark.md  2026-06-19_00-29-27_UTC_release-v2.4.0.md  2026-06-19_07-57-58_JST_shogi-ai-improvement_search-ordering_usi-report.md  2026-06-19_08-54-15_UTC_release-v2.4.1.md  2026-06-19_12-15-23_UTC_qsearch-delta-pruning-experiment.md  2026-06-19_12-29-00_UTC_null-move-pruning-experiment.md  2026-06-19_12-42-24_UTC_forced-evasion-static-fold.md  2026-06-19_13-07-16_UTC_root-rescue-and-profile-findings.md  2026-06-19_13-22-42_UTC_precise-see-rescue-experiment.md  2026-06-19_13-47-02_UTC_boundary-check-evasion-extension.md  2026-06-19_13-57-46_UTC_tt-extension-budget-guard-experiment.md  2026-06-19_14-10-00_UTC_boundary-check-evasion-replies4-experiment.md  2026-06-19_14-27-49_UTC_single-reply-chain-extension-experiment.md  2026-06-19_14-34-00_UTC_boundary-evasion-precomputed-moves-experiment.md  2026-06-19_14-44-38_UTC_search-arrayvec-sort-experiment.md  2026-06-19_14-46-57_UTC_root-previous-score-ordering-experiment.md  2026-06-19_14-50-33_UTC_legal-move-count-up-to-experiment.md  2026-06-19_14-53-56_UTC_skip-single-move-sorting-experiment.md  2026-06-19_15-05-38_UTC_search-distillation-pipeline.md  2026-06-19_15-23-25_UTC_distillation-vs-supervised-policy.md  2026-06-19_15-26-44_UTC_distill-softmax-temperature.md  2026-06-19_15-40-00_UTC_wdoor-2026-kifu-collection.md  2026-06-19_16-05-00_UTC_wdoor-supervised-weight-smoke.md  2026-06-19_16-25-00_UTC_qsearch-terminal-mate-experiment.md  2026-06-19_16-45-00_UTC_csa-policy-quality-filters.md  2026-06-19_17-05-00_UTC_wdoor-quality-200k-weight-smoke.md  2026-06-19_17-26-16_UTC_all-losing-bestmove-fallback.md  2026-06-19_17-30-00_UTC_root-boundary-check-evasion-experiment.md  2026-06-19_17-59-31_UTC_qsearch-terminal-fast-evasion.md  2026-06-19_18-44-00_UTC_soft-score-distillation-tooling.md  2026-06-19_18-53-19_UTC_soft-distill-1000-smoke.md  2026-06-19_19-05-07_UTC_soft-distill-v2-tooling.md  2026-06-19_19-15-50_UTC_soft-distill-v2-500-smoke.md  2026-06-19_19-32-36_UTC_soft-distill-v3-hardpositions-plan.md  2026-06-19_20-55-41_UTC_soft-distill-v3-static-hard300.md  2026-06-19_21-08-28_UTC_soft-distill-v3-mixed-smoke.md  2026-06-19_21-14-45_UTC_distill-max-teacher-gap.md  2026-06-19_21-17-40_UTC_distill-extra-valid.md  2026-06-19_21-20-20_UTC_distill-stats.md  2026-06-19_21-29-45_UTC_soft-distill-v3-mixed-gap80.md  (+103 more)
scripts/: bench_halfkp64_learned_vs_v250.sh  bench_halfkp64_vs_kpp_5s.sh  safe_search_run.sh  safe_search_run_smoke.sh  train_halfkp64_kpp.sh  train_halfkp64_large.sh  train_halfkp64_search.sh
shogi_lib/: Cargo.toml
shogi_lib/src/: bitboard.rs  lib.rs  movegen.rs  position.rs  zobrist.rs
src/: ai.rs  benchmark_tools.rs  evaluation.rs  evaluation_benchmark.rs  evaluation_speed_benchmark.rs  game.rs  halfkp_training.rs  kpp_learn.rs  kpp_test.rs  lib.rs  main.rs  mate_search.rs  move_ordering.rs  old_evaluation.rs  position_hash.rs  search.rs  search_quality.rs  sennichite.rs  shogi_ai.rs  training_data.rs  training_tools.rs  usi_shogi.rs  utils.rs
src/ai/: alpha_beta.rs  iterative.rs  outcome.rs  parallel.rs  qsearch.rs  score.rs  transposition.rs
src/benchmark_tools/: benchmark.rs  eval_profile.rs  halfkp_trace_bench.rs  movegen_profile.rs  perft.rs  search_fingerprint.rs  search_profile.rs  usi_benchmark.rs
src/evaluation/: codec.rs  constants.rs  debug.rs  evaluator.rs  facade.rs  features.rs  halfkp.rs  kernels.rs  sparse.rs  tiny_nnue.rs
src/halfkp_training/: codec.rs
src/training_tools/: bonanza_pairwise_train.rs  csa_policy_dump.rs  csa_rate_stats.rs  dataset_build.rs  halfkp_dataset_shard.rs  halfkp_kpp_train.rs  halfkp_rank_dataset.rs  halfkp_search_teacher.rs  kpp_learn.rs  (+6 more)
tests/: usi_transcript.rs
tools/: capture_benchmark_metadata.sh  check_binary_inventory.py  check_clippy_ratchet.sh  clean_mmto_runs.sh  collect_rerank_feedback_pool.sh  download_wdoor_kifu.sh  extract_bench_failure_pairs.py  extract_rerank_hard_pairs.py  make_wdoor_mmto_positions.sh  run_bench_failure_dagger_listwise.sh  run_bench_failure_mining_suite.sh  run_bonanza_pairwise_pipeline.sh  run_bonanza_root_pipeline.sh  run_kpp_supervised_compare.sh  run_mmto_bench_feedback_probe.sh  run_mmto_benchgate_probe.sh  run_mmto_dagger_from_run.sh  run_mmto_direct_feedback_sample_probe.sh  run_mmto_from_dump.sh  run_mmto_hard_stage.sh  run_mmto_large_margin_teacher_pairs.sh  run_mmto_listwise_screen.sh  run_mmto_refresh_from_candidate.sh  run_mmto_refresh_loop.sh  run_mmto_rerank_long.sh  run_mmto_rerank_pipeline.sh  run_protected_feedback_from_existing.sh  run_pv_sibling_feedback_pipeline.sh  run_pv_sibling_listwise_from_dump.sh  run_pv_sibling_strong_teacher_feedback.sh  run_strong_teacher_feedback_screen.sh  sample_jsonl.py  summarize_mmto_runs.py  train_halfkp_numpy.py  train_nnue_numpy.py  write_training_manifest.py
(+21 files in other folders)
