[package]
name = "shogi_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
shogi_core = { version = "0.1.5" }
csa = "1.0.2"
anyhow = "1.0"
rayon = "1.5"
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
indicatif = "0.17"
flate2 = "1.0"
plotters = "0.3.6"
arrayvec = "0.7.2"
shogi_lib = { path = "./shogi_lib" }
circular-buffer = "0.1.1"
lazy_static = "1.4.0"
rand_chacha = "0.3.1"
libc = "0.2"
shogi_usi_parser = "0.1.0"

[[bin]]
name = "kpp_learn"
path = "src/kpp_learn.rs"

[[bin]]
name = "shogi_game"
path = "src/bin/shogi_game.rs"

[[bin]]
name = "usi_engine"
path = "src/bin/usi_engine.rs"

[[bin]]
name = "kpp_weight_check"
path = "src/bin/kpp_weight_check.rs"

[[bin]]
name = "kpp_self_learn"
path = "src/bin/kpp_self_learn.rs"

[[bin]]
name = "sfen_test"
path = "src/bin/sfen_test.rs"
