[package]
name = "shogi_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
shogi_core = { version = "0.1.5" }
csa = "1.0.2"
anyhow = "1.0"
rayon = "1.5"
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
indicatif = "0.17"
flate2 = "1.0"
plotters = "0.3.6"
arrayvec = "0.7.2"
shogi_lib = { path = "./shogi_lib" }
circular-buffer = "0.1.1"
lazy_static = "1.4.0"
rand_chacha = "0.3.1"
libc = "0.2"
shogi_usi_parser = "0.1.0"
clap = { version = "4.5.43", features = ["derive"] }

[[bin]]
name = "kpp_learn"
path = "src/kpp_learn.rs"

[[bin]]
name = "shogi_game"
path = "src/bin/shogi_game.rs"

[[bin]]
name = "usi_engine"
path = "src/bin/usi_engine.rs"

[[bin]]
name = "kpp_weight_check"
path = "src/bin/kpp_weight_check.rs"

[[bin]]
name = "kpp_self_learn"
path = "src/bin/kpp_self_learn.rs"

[[bin]]
name = "distill_dump"
path = "src/bin/distill_dump.rs"

[[bin]]
name = "distill_train"
path = "src/bin/distill_train.rs"

[[bin]]
name = "mmto_dump"
path = "src/bin/mmto_dump.rs"

[[bin]]
name = "mmto_train"
path = "src/bin/mmto_train.rs"

[[bin]]
name = "mmto_probe"
path = "src/bin/mmto_probe.rs"

[[bin]]
name = "mmto_stability_filter"
path = "src/bin/mmto_stability_filter.rs"

[[bin]]
name = "csa_policy_dump"
path = "src/bin/csa_policy_dump.rs"
