[package]
name = "shogi_ai"
version = "0.1.0"
edition = "2021"
autobins = false
default-run = "usi_engine"

[workspace]
members = ["shogi_lib"]
default-members = ["."]
resolver = "2"

[features]
default = []
halfkp64 = []
training-tools = ["dep:csa", "dep:glob", "dep:plotters", "dep:sha2"]
benchmark-tools = []
research-tools = ["dep:glob", "dep:plotters"]

# Keep the distributed CPU binary optimized across Linux and Windows MSVC.
# ThinLTO improves cross-module inlining without the memory cost of full LTO.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "unwind"

[dependencies]
shogi_core = { version = "0.1.5" }
csa = { version = "1.0.2", optional = true }
anyhow = "1.0"
rayon = "1.5"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", optional = true }
glob = { version = "0.3", optional = true }
plotters = { version = "0.3.6", optional = true }
arrayvec = "0.7.2"
shogi_lib = { path = "./shogi_lib" }
lazy_static = "1.4.0"
rand_chacha = "0.3.1"
shogi_usi_parser = "0.1.0"
clap = { version = "4.5.43", features = ["derive"] }

[[bin]]
name = "usi_engine"
path = "src/bin/usi_engine.rs"

# Supported training and data tools. These keep their existing CLI names, but
# are opt-in so a production build does not compile the research target set.
[[bin]]
name = "bonanza_pairwise_train"
path = "src/bin/bonanza_pairwise_train.rs"
required-features = ["training-tools"]

[[bin]]
name = "csa_policy_dump"
path = "src/bin/csa_policy_dump.rs"
required-features = ["training-tools"]

[[bin]]
name = "csa_rate_stats"
path = "src/bin/csa_rate_stats.rs"
required-features = ["training-tools"]

[[bin]]
name = "dataset_build"
path = "src/bin/dataset_build.rs"
required-features = ["training-tools"]

[[bin]]
name = "halfkp_dataset_shard"
path = "src/bin/halfkp_dataset_shard.rs"
required-features = ["training-tools"]

[[bin]]
name = "halfkp_kpp_train"
path = "src/bin/halfkp_kpp_train.rs"
required-features = ["training-tools"]

[[bin]]
name = "halfkp_rank_dataset"
path = "src/bin/halfkp_rank_dataset.rs"
required-features = ["training-tools"]

[[bin]]
name = "halfkp_search_teacher"
path = "src/bin/halfkp_search_teacher.rs"
required-features = ["training-tools"]

[[bin]]
name = "halfkp_search_train"
path = "src/bin/halfkp_search_train.rs"
required-features = ["training-tools"]

[[bin]]
name = "halfkp_train"
path = "src/bin/halfkp_train.rs"
required-features = ["training-tools"]

[[bin]]
name = "jsonl_shard"
path = "src/bin/jsonl_shard.rs"
required-features = ["training-tools"]

[[bin]]
name = "kpp_learn"
path = "src/kpp_learn.rs"
required-features = ["training-tools"]

[[bin]]
name = "kpp_position_pool"
path = "src/bin/kpp_position_pool.rs"
required-features = ["training-tools"]

[[bin]]
name = "kpp_self_learn"
path = "src/bin/kpp_self_learn.rs"
required-features = ["training-tools"]

[[bin]]
name = "rank_stats"
path = "src/bin/rank_stats.rs"
required-features = ["training-tools"]

# Stable benchmark and profiling entry points used by CI and release checks.
[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "eval_profile"
path = "src/bin/eval_profile.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "halfkp_trace_bench"
path = "src/bin/halfkp_trace_bench.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "movegen_profile"
path = "src/bin/movegen_profile.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "perft"
path = "src/bin/perft.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "search_fingerprint"
path = "src/bin/search_fingerprint.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "search_profile"
path = "src/bin/search_profile.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "usi_benchmark"
path = "src/bin/usi_benchmark.rs"
required-features = ["benchmark-tools"]

# Experimental and diagnostic tools. No compatibility guarantee is made for
# their arguments or output formats.
[[bin]]
name = "adjust_weights"
path = "src/bin/adjust_weights.rs"
required-features = ["research-tools"]

[[bin]]
name = "bench_failure_feedback"
path = "src/bin/bench_failure_feedback.rs"
required-features = ["research-tools"]

[[bin]]
name = "bench_failure_miner"
path = "src/bin/bench_failure_miner.rs"
required-features = ["research-tools"]

[[bin]]
name = "distill_dump"
path = "src/bin/distill_dump.rs"
required-features = ["research-tools"]

[[bin]]
name = "distill_stats"
path = "src/bin/distill_stats.rs"
required-features = ["research-tools"]

[[bin]]
name = "distill_train"
path = "src/bin/distill_train.rs"
required-features = ["research-tools"]

[[bin]]
name = "halfkp_feature_dump"
path = "src/bin/halfkp_feature_dump.rs"
required-features = ["research-tools"]

[[bin]]
name = "kpp_weight_check"
path = "src/bin/kpp_weight_check.rs"
required-features = ["research-tools"]

[[bin]]
name = "mmto_balance_dataset"
path = "src/bin/mmto_balance_dataset.rs"
required-features = ["research-tools"]

[[bin]]
name = "mmto_dump"
path = "src/bin/mmto_dump.rs"
required-features = ["research-tools"]

[[bin]]
name = "mmto_probe"
path = "src/bin/mmto_probe.rs"
required-features = ["research-tools"]

[[bin]]
name = "mmto_rerank_gate"
path = "src/bin/mmto_rerank_gate.rs"
required-features = ["research-tools"]

[[bin]]
name = "mmto_score_gate"
path = "src/bin/mmto_score_gate.rs"
required-features = ["research-tools"]

[[bin]]
name = "mmto_stability_filter"
path = "src/bin/mmto_stability_filter.rs"
required-features = ["research-tools"]

[[bin]]
name = "mmto_train"
path = "src/bin/mmto_train.rs"
required-features = ["research-tools"]

[[bin]]
name = "mmto_tree_dump"
path = "src/bin/mmto_tree_dump.rs"
required-features = ["research-tools"]

[[bin]]
name = "mmto_tree_train"
path = "src/bin/mmto_tree_train.rs"
required-features = ["research-tools"]

[[bin]]
name = "nnue_feature_dump"
path = "src/bin/nnue_feature_dump.rs"
required-features = ["research-tools"]

[[bin]]
name = "nnue_rank_dump"
path = "src/bin/nnue_rank_dump.rs"
required-features = ["research-tools"]

[[bin]]
name = "policy_regret_probe"
path = "src/bin/policy_regret_probe.rs"
required-features = ["research-tools"]

[[bin]]
name = "position_probe"
path = "src/bin/position_probe.rs"
required-features = ["research-tools"]

[[bin]]
name = "qsearch_candidate_probe"
path = "src/bin/qsearch_candidate_probe.rs"
required-features = ["research-tools"]

[[bin]]
name = "record_analyze"
path = "src/bin/record_analyze.rs"
required-features = ["research-tools"]

[[bin]]
name = "record_finetune"
path = "src/bin/record_finetune.rs"
required-features = ["research-tools"]

[[bin]]
name = "rerank_feedback_collect"
path = "src/bin/rerank_feedback_collect.rs"
required-features = ["research-tools"]

[[bin]]
name = "root_decision_probe"
path = "src/bin/root_decision_probe.rs"
required-features = ["research-tools"]

[[bin]]
name = "root_rescue_probe"
path = "src/bin/root_rescue_probe.rs"
required-features = ["research-tools"]

[[bin]]
name = "see_probe"
path = "src/bin/see_probe.rs"
required-features = ["research-tools"]

[[bin]]
name = "shogi_game"
path = "src/bin/shogi_game.rs"
required-features = ["research-tools"]

[[bin]]
name = "tree_feedback_collect"
path = "src/bin/tree_feedback_collect.rs"
required-features = ["research-tools"]

[[bin]]
name = "value_dump"
path = "src/bin/value_dump.rs"
required-features = ["research-tools"]

[[bin]]
name = "value_regret_probe"
path = "src/bin/value_regret_probe.rs"
required-features = ["research-tools"]

[[bin]]
name = "value_train"
path = "src/bin/value_train.rs"
required-features = ["research-tools"]
